<resources>
    <string name="app_name">ReadIt</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="btn_sign_in_text">Iniciar sesión</string>
    <string name="remember_me_text">Mantener sesión iniciada</string>
    <string name="btn_sign_up_text">Registrarse</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="btn_cancel_text">Cancelar</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_my_books">Mis libros</string>
    <string name="txt_settings">Configuración</string>
    <string name="nav_drawer_home_open">Open</string>
    <string name="nav_drawer_home_close">Close</string>
    <string name="txt_busqueda">Buscar</string>
    <string name="txt_sign_out">Cerrar Sesión</string>

    <string name="new_book">Ingrese un nuevo libro</string>
    <string name="id_isbn">ID (ISBN)</string>
    <string name="Book_Title">Titulo del libro</string>
    <string name="Book_Writer">Autor</string>
    <string name="Gender">Genero</string>
    <string name="cover_url">CoverUrl</string>


    <string name="added_status">Added</string>
    <string name="book_cover">Book Cover</string>
    <string name="txt_app_name">ReadIt</string>
    <string name="error_invalid_credentials">Usuario o contraseña incorrectos</string>

    <string name="error_password">Mínimo: </string>

    <string name="error_password_length">8 caracteres.</string>
    <string name="error_password_letter">una letra.</string>
    <string name="error_password_number">un número.</string>
    <string name="error_confirm_password">Las contraseñas no coinciden.</string>
    <string name="error_username_taken">El nombre de usuario ya está registrado.</string>
    <string name="error_username_blank">Campo obligatorio.</string>
    <string name="error_email_invalid">El correo electrónico no es válido.</string>
    <string name="logout_success">Sesión cerrada con éxito </string>

    <string name="well_read">Leidos</string>
    <string name="reading">Leyendo</string>
    <string name="will_read">Pendientes</string>

    <string name="My_books_fragment">Mis libros</string>
    <string name="Search_fragment">Buscar</string>
    <string name="Settings_fragment">Configuración</string>
    <string name="use_os_theme">Usar tema del sistema</string>
    <string name="dark_theme">Tema Oscuro</string>
    <string name="welcome_msg">¡Bienvenido/a, %1$s!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Books_Read">Estos son los libros que leíste</string>
    <string name="BookGender">Género</string>
    <string name="Books_reading">Estos son los libros que estás leyendo</string>
    <string name="Books_Will_Read">Estos son los libros que tenés pendiente</string>
    <string name="Save_Form">Guardar</string>
    <string name="gender_label">Género</string>

    <string name="books_pending">Libros pendientes: %1$d</string>
    <string name="books_read">Libros leídos: %1$d</string>
    <string name="books_reading">Libros en progreso: %1$d</string>
    <string name="sucess_sign_up">Usuario registrado con éxito</string>
    <string name="txt_profile">Perfil</string>

    <string name="profile_username">Nombre de usuario: %1$s</string>
    <string name="profile_email">Correo electrónico: %1$s</string>
    <string name="profile_gender">Género: %1$s</string>
    <string name="profile_additional_info">Información adicional</string>
    <string name="profile_additional_info_example">Detalles del usuario a implementar a futuro\nPor ejemplo, libros favoritos, etc.</string>


</resources>