<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".home.fragments.SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Settings_fragment"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/system_theme_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_os_theme"
        app:layout_constraintTop_toBottomOf="@id/theme_toggle"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>