<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.fragments.MyBooksFragment">

    <TextView
        android:id="@+id/tvmybooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/My_books_fragment"
        android:textAlignment="center"
        android:textSize="24sp"

        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/ibleidos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="180dp"
        android:src="@drawable/add_button"
        android:contentDescription="@string/well_read"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvmybooks" />

    <TextView
        android:id="@+id/tvleidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Leidos"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/ibleidos"
        app:layout_constraintStart_toEndOf="@id/ibleidos"
        app:layout_constraintBottom_toBottomOf="@id/ibleidos"/>

    <ImageButton
        android:id="@+id/ibenprogreso"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="180dp"
        android:src="@drawable/add_button"
        android:contentDescription="@string/reading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibleidos" />

    <TextView
        android:id="@+id/tvenprogreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="En Progreso"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/ibenprogreso"
        app:layout_constraintStart_toEndOf="@id/ibenprogreso"
        app:layout_constraintBottom_toBottomOf="@id/ibenprogreso"/>

    <ImageButton
        android:id="@+id/ibpendientes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="180dp"
        android:src="@drawable/add_button"
        android:contentDescription="@string/will_read"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibenprogreso" />

    <TextView
        android:id="@+id/tvpendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pendientes"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/ibpendientes"
        app:layout_constraintStart_toEndOf="@id/ibpendientes"
        app:layout_constraintBottom_toBottomOf="@id/ibpendientes"/>

</androidx.constraintlayout.widget.ConstraintLayout>